# ConvoNet

./: .gitignore  CMakeLists.txt  ConvoNet.cpp  ConvoNet.h  README.md
client/: Client.cpp  Client.h  main_client.cpp
server/: Server.cpp  Server.h  main.cpp
